br_semantic test commit

--- a/index.html
+++ b/index.html
@@ -18,7 +18,24 @@
         <![endif]-->
 
 
+            <section class="logo">
+                logo
+            </section>
 
+            <section class="navigation">
+                navigation
+            </section>
+
+            <section class="header">
+                header/banner
+            </section>
+
+            <section class="side/body">
+                <div> side bar </div>
+                <div> Body Area</div>
+            </section>
+
+         <footer class="footer">footer</footer>
 
 
 
