first br_semantic commit

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="base.css">
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -30,15 +30,14 @@
                 header/banner
             </section>
 
-            <section class="side/body">
-                <div> side bar </div>
-                <div> Body Area</div>
+            <section class="sidebody">
+                <div class="side"> side bar </div>
+                <div class="body"> Body Area</div>
             </section>
 
          <footer class="footer">footer</footer>
 
-<!-- 
-this is the base stuff -->
+
 
 
 
