--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="base.css">
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -19,21 +19,32 @@
 
 
             <section class="logo">
-                logo
+                logo navigation
             </section>
 
-            <section class="navigation">
-                navigation
-            </section>
-
+         
             <section class="header">
                 header/banner
             </section>
 
-            <section class="side/body">
-                <div> side bar </div>
-                <div> Body Area</div>
-            </section>
+         <section class="introarea">
+            intro text area
+         </section>
+
+         <section class="boxes">
+            <div class="box1">
+                box1
+            </div>
+            
+            <div class="box2">
+                box2
+            </div>
+
+            <div class="box3">
+                box3
+            </div>
+
+         </section>
 
          <footer class="footer">footer</footer>
 
