--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="base.css">
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -22,18 +22,25 @@
                 logo
             </section>
 
-            <section class="navigation">
-                navigation
-            </section>
 
-            <section class="header">
+ <section class="cluster">
+
+            <div class="navigation">
+                side bar navigation
+            </div>
+
+            <section class="headbancol">
+
+            <div class="header">
                 header/banner
-            </section>
+            </div>
 
-            <section class="side/body">
-                <div> side bar </div>
-                <div> Body Area</div>
-            </section>
+           
+                <div class="bodyarea"> Body Area</div>
+
+        </section>
+
+        </section>
 
          <footer class="footer">footer</footer>
 
